@@ -2,6 +2,7 @@ svn repository
 ==============
 * error checking in front-end for non-positive-definite observed covariance matrices
 * fix bug in MxMatrix indexing operator
+* added deprecation warning for argument 'all'=TRUE in mxPath()
 
 Release 1.0.6-1581 (March 10, 2011)
 ===================================
